[package]
name = "ethui-rpc"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
authors.workspace = true

[dependencies]
ethui-types.workspace = true
ethui-settings.workspace = true
ethui-db.workspace = true
ethui-dialogs.workspace = true
ethui-networks.workspace = true
ethui-wallets.workspace = true
ethui-connections.workspace = true
ethui-simulator.workspace = true
ethui-sync.workspace = true
ethui-forge.workspace = true
ethui-broadcast.workspace = true

alloy.workspace = true
tauri.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
jsonrpc-core.workspace = true
thiserror.workspace = true
color-eyre.workspace = true
url.workspace = true
bon.workspace = true

[features]
default = []
forge-traces = []
