
[package]
name = "ethui-safe"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
authors.workspace = true

[dependencies]
tauri.workspace = true
ethui-db.workspace = true
ethui-types.workspace = true
ethui-networks.workspace = true

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
once_cell.workspace = true
tracing.workspace = true
url.workspace = true
async-trait.workspace = true
futures.workspace = true
reqwest.workspace = true
