[package]
name = "iron-settings"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
authors.workspace = true

[dependencies]
iron-types = { workspace = true }
iron-broadcast = { workspace = true }

ethers = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
async-trait = { workspace = true }
auto-launch = "0.5.0"
