[package]
name = "ethui-settings"
version.workspace = true
edition.workspace = true
license.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
authors.workspace = true

[dependencies]
ethui-types.workspace = true
ethui-broadcast.workspace = true
ethui-tracing.workspace = true

serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
tokio.workspace = true
tracing.workspace = true
kameo.workspace = true
color-eyre.workspace = true
once_cell.workspace = true
async-trait.workspace = true
auto-launch = "0.5.0"
alloy.workspace = true
foundry-block-explorers.workspace = true
alloy-chains.workspace = true
serde-constant.workspace = true

[dev-dependencies]
tempfile.workspace = true
