[package]
name = "simulator"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
authors.workspace = true

[dependencies]
networks.workspace = true
common.workspace = true
wallets.workspace = true
db.workspace = true

tauri.workspace = true
tokio.workspace = true
serde.workspace = true
color-eyre.workspace = true
alloy.workspace = true
revm = { version = "29", features = ["alloydb"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
