[package]
name = "ethui-simulator"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
authors.workspace = true

[dependencies]
ethui-networks.workspace = true
ethui-types.workspace = true
ethui-wallets.workspace = true
ethui-db.workspace = true

tauri.workspace = true
tokio.workspace = true
serde.workspace = true
color-eyre.workspace = true
alloy.workspace = true
revm = { version = "33", default-features = false, features = ["alloydb"] }
