[package]
name = "ethui-stacks"
version.workspace = true
edition.workspace = true
license.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
authors.workspace = true

[dependencies]
ethui-types.workspace = true
ethui-settings.workspace = true
ethui-networks.workspace = true
ethui-broadcast.workspace = true
ethui-db.workspace = true
ethui-args.workspace = true

alloy.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
futures.workspace = true
regex.workspace = true
kameo.workspace = true
color-eyre.workspace = true

glob.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true

[dev-dependencies]
tempfile.workspace = true
reqwest.workspace = true
