[package]
name = "stacks"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
authors.workspace = true

[dependencies]
common.workspace = true
settings.workspace = true
networks.workspace = true
broadcast.workspace = true
db.workspace = true
args.workspace = true

url.workspace = true
alloy.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
futures.workspace = true
regex.workspace = true
kameo.workspace = true
color-eyre.workspace = true

glob.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true
reqwest.workspace = true
[dev-dependencies]
tempfile.workspace = true
