[package]
name = "ethui-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
authors.workspace = true

[dependencies]
ethui-sync-anvil.workspace = true
ethui-sync-alchemy.workspace = true
tauri.workspace = true
ethui-db.workspace = true
ethui-types.workspace = true
ethui-broadcast.workspace = true
ethui-networks.workspace = true
ethui-abis.workspace = true

alloy.workspace = true
tokio.workspace = true
serde.workspace = true
color-eyre.workspace = true
tracing.workspace = true
