[package]
name = "sync"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
authors.workspace = true

[dependencies]
sync-anvil.workspace = true
sync-alchemy.workspace = true
tauri.workspace = true
db.workspace = true
common.workspace = true
broadcast.workspace = true
networks.workspace = true
abis.workspace = true

alloy.workspace = true
tokio.workspace = true
serde.workspace = true
color-eyre.workspace = true
tracing.workspace = true
